--- a/templates/blocks/branding.html
+++ b/templates/blocks/branding.html
@@ -3,14 +3,14 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="logo">
-                    <h1><a href="index.html">e<span>Electronics</span></a></h1>
+                    <h1><a href="{% url 'all_product_view' %}">e<span>Electronics</span></a></h1>
                 </div>
             </div>
 
             <div class="col-sm-6">
                 <div class="shopping-item">
-                    <a href="cart.html">Cart - <span class="cart-amunt">$800</span> <i class="fa fa-shopping-cart"></i>
-                        <span class="product-count">5</span></a>
+                    <a href="cart.html">Cart - <span class="cart-amunt">{{ cart.total_price }}</span> <i class="fa fa-shopping-cart"></i>
+                        <span class="product-count">{{ cart.total_items }}</span></a>
                 </div>
             </div>
         </div>
